--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
 body {background-color: rgb(211, 255, 211);}
+
+.kea {
+    height: 500px;
+    width: 450px;
+    margin: 10px;
+    border-color: rgb(0, 0, 0);
+    border-width: 4px;
+    border-style: solid;
+    border-radius: 10px;
+    }
+    h1 {text-align: center;}
+    h3 {text-align: center;}
