--- a/style.css
+++ b/style.css
@@ -11,3 +11,5 @@ body {background-color: rgb(211, 255, 211);}
     }
     h1 {text-align: center;}
     h3 {text-align: center;}
+
+span {font-weight: bold;}
