--- a/Info.css
+++ b/Info.css
@@ -3,4 +3,4 @@ h1 {text-align: center;}
 h3 {text-align: center;}
 
 span {font-weight: bold;}
-p { text-align: center;}
+p { text-align: center; font-size: large;}
